--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "@angular-devkit/build-angular": "^15.1.4",
     "@angular/cli": "~15.1.4",
     "@angular/compiler-cli": "^15.1.0",
+    "@nightwatch/mobile-helper": "^0.1.11",
     "@types/jasmine": "~4.3.0",
+    "@types/nightwatch": "^2.3.18",
+    "chromedriver": "^110.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nightwatch": "^2.6.15",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   }
 }
